# DevOpsTest

./: .env.example  .gitignore  README.md  docker-compose.yaml
.github/workflows/: ci.yaml
app/: .pre-commit-config.yaml  Dockerfile  main.py  pyproject.toml
app/migrations/models/: 1_20250909183622_None.py
app/src/: server.py
app/src/api/middlewares/: logging.py
app/src/api/routers/: __init__.py  item_router.py
app/src/config/: load_env.py
app/src/db/: __init__.py  config.py
app/src/db/models/: __init__.py  items.py
app/src/repository/: item.py
app/src/schemas/: item.py  msg.py
app/src/service/: item.py
app/tests/: conftest.py  test_add.py  test_stats.py
