[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aerich[toml]>=0.9.1",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "tortoise-orm[asyncpg]>=0.25.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]

[tool.aerich]
tortoise_orm = "src.db.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
